--- a/.gitignore
+++ b/.gitignore
@@ -115,3 +115,4 @@ venv.bak/
 client_secret.json
 config.json
 token.json
+client_secret_1038806829839-i0os4idivvupurh7mkpstcffu1oa52ce.apps.googleusercontent.com.json
