--- a/.gitignore
+++ b/.gitignore
@@ -116,3 +116,6 @@ client_secret.json
 config.json
 token.json
 client_secret_1038806829839-i0os4idivvupurh7mkpstcffu1oa52ce.apps.googleusercontent.com.json
+
+# macOS
+.DS_Store
